--- a/BookToMoon/SidebarMenu/Base.lproj/Main.storyboard
+++ b/BookToMoon/SidebarMenu/Base.lproj/Main.storyboard
@@ -6,10 +6,10 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Find MoonVC-->
         <scene sceneID="vKD-s6-uA8">
             <objects>
-                <viewController id="MUU-Cv-vii" sceneMemberID="viewController">
+                <viewController id="MUU-Cv-vii" customClass="FindMoonVC" customModule="BookToMoon" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="iEd-Us-Qga"/>
                         <viewControllerLayoutGuide type="bottom" id="Uc3-xU-BKj"/>
@@ -37,7 +37,7 @@
                                                 <color key="textColor" white="0.080145474137931036" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uto-zz-XJU">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uto-zz-XJU" userLabel="LONGITUDE">
                                                 <rect key="frame" x="129" y="53" width="42" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -110,6 +110,8 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="latLabel" destination="1Dt-9L-vkd" id="EXl-f7-egX"/>
+                        <outlet property="lngLabel" destination="uto-zz-XJU" id="xhC-cd-o4d"/>
                         <segue destination="vXZ-lx-hvc" kind="show" id="tg4-8w-D4h"/>
                     </connections>
                 </viewController>
